--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -34,14 +34,24 @@
 
         <!-- Środkowy panel: Wyświetlanie pytań i odpowiedzi -->
         <StackPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <TextBlock Text="Punkty: "
-           FontSize="16" FontWeight="Bold" Margin="0,0,0,10">
-                        <Run Text="{Binding Score}" />
-                        <Run Text=" / " />
-                        <Run Text="{Binding TotalQuestions}" />
-            </TextBlock>
 
+            <!-- Etykieta z instrukcją -->
+            <TextBlock Text="{Binding InstructionLabel}"
+                   FontSize="18" 
+                   FontWeight="Bold"
+                   Foreground="#555"
+                   Margin="0,0,0,10"/>
+
+
+            <!-- Treść pyatnia -->
             <TextBlock Text="{Binding CurrentQuestion}" FontSize="20" FontWeight="Bold" Margin="0,0,0,10"/>
+
+            <!-- Podpowiedź poniżej pytania -->
+            <TextBlock Text="{Binding CurrentHint}" 
+                   FontSize="20" 
+                   FontStyle="Italic" 
+                   Foreground="#888" 
+                   Margin="0,0,0,20"/>
 
             <TextBox x:Name="UserAnswerTextBox" 
                     Text="{Binding UserAnswer, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
@@ -53,6 +63,13 @@
                     <KeyBinding Key="Esc" Command="{Binding SkipQuestionCommand}" />
                 </TextBox.InputBindings>
             </TextBox>
+
+            <TextBlock Text="Punkty: "
+           FontSize="16" FontWeight="Bold" Margin="0,0,0,10">
+                        <Run Text="{Binding Score}" />
+                        <Run Text=" / " />
+                        <Run Text="{Binding TotalQuestions}" />
+            </TextBlock>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,0">
                 <Button Content="Sprawdź odpowiedź" 
