--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -20,12 +20,18 @@
         <TreeView Grid.Column="0"
           ItemsSource="{Binding Chapters}"
           SelectedItemChanged="TreeView_SelectedItemChanged">
+            <TreeView.ItemContainerStyle>
+                <Style TargetType="TreeViewItem">
+                    <!-- Powiązanie IsExpanded z właściwością Chapter -->
+                    <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
+                </Style>
+            </TreeView.ItemContainerStyle>
             <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate ItemsSource="{Binding Lessons}">
                     <StackPanel Orientation="Horizontal">
                         <CheckBox IsChecked="{Binding IsSelected, Mode=TwoWay}"
-                            Command="{Binding DataContext.ToggleSelectionCommand, RelativeSource={RelativeSource AncestorType=Window}}"
-                            CommandParameter="{Binding}" />
+                          Command="{Binding DataContext.ToggleSelectionCommand, RelativeSource={RelativeSource AncestorType=Window}}"
+                          CommandParameter="{Binding}" />
                         <TextBlock Text="{Binding Title}" FontSize="14"/>
                     </StackPanel>
                 </HierarchicalDataTemplate>
