--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -128,6 +128,12 @@
                  IsChecked="{Binding HintLevel, Converter={StaticResource EnumToBooleanConverter}, ConverterParameter=NoHints}"
                  Command="{Binding ChangeHintLevelCommand}"
                  CommandParameter="NoHints"/>
+
+                <Button Content="{Binding MuteButtonText}" 
+                Command="{Binding ToggleMuteCommand}"
+                Width="150" Height="40"
+                Margin="0,20,0,0"
+                Style="{StaticResource MuteButtonStyle}"/>
             </StackPanel>
         </Border>
     </Grid>
