poprawiono UI i ujednolicono rozmiar ramek

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,33 +10,40 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
             <!-- Lewy panel z TreeView -->
-            <ColumnDefinition Width="500"/>
+            <ColumnDefinition Width="*"/>
             <!-- Środkowy panel na ćwiczenia -->
             <ColumnDefinition Width="200"/>
             <!-- Prawy panel z opcjami nauki -->
         </Grid.ColumnDefinitions>
 
         <!-- TreeView: Rozdziały i Lekcje (LEWY PANEL) -->
-        <TreeView Grid.Column="0"
+        <Border Grid.Column="0" BorderBrush="#CCCCCC" BorderThickness="1"  >
+
+            <TreeView Grid.Column="0"
           ItemsSource="{Binding Chapters}"
-          SelectedItemChanged="TreeView_SelectedItemChanged">
-            <TreeView.ItemContainerStyle>
-                <Style TargetType="TreeViewItem">
-                    <!-- Powiązanie IsExpanded z właściwością Chapter -->
-                    <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
-                </Style>
-            </TreeView.ItemContainerStyle>
-            <TreeView.ItemTemplate>
-                <HierarchicalDataTemplate ItemsSource="{Binding Lessons}">
-                    <StackPanel Orientation="Horizontal">
-                        <CheckBox Padding="2" IsChecked="{Binding IsSelected, Mode=TwoWay}"
+          SelectedItemChanged="TreeView_SelectedItemChanged"
+              Background="Transparent"
+              BorderThickness="0"
+              Padding="0"
+              Margin="0">
+                <TreeView.ItemContainerStyle>
+                    <Style TargetType="TreeViewItem">
+                        <!-- Powiązanie IsExpanded z właściwością Chapter -->
+                        <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
+                    </Style>
+                </TreeView.ItemContainerStyle>
+                <TreeView.ItemTemplate>
+                    <HierarchicalDataTemplate ItemsSource="{Binding Lessons}">
+                        <StackPanel Orientation="Horizontal">
+                            <CheckBox Padding="2" IsChecked="{Binding IsSelected, Mode=TwoWay}"
                           Command="{Binding DataContext.ToggleSelectionCommand, RelativeSource={RelativeSource AncestorType=Window}}"
                           CommandParameter="{Binding}" />
-                        <TextBlock Text="{Binding Title}" FontSize="14"/>
-                    </StackPanel>
-                </HierarchicalDataTemplate>
-            </TreeView.ItemTemplate>
-        </TreeView>
+                            <TextBlock Text="{Binding Title}" FontSize="14"/>
+                        </StackPanel>
+                    </HierarchicalDataTemplate>
+                </TreeView.ItemTemplate>
+            </TreeView>
+        </Border>
 
         <!-- Środkowy panel: Wyświetlanie pytań i odpowiedzi -->
         <StackPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
@@ -128,6 +135,18 @@
                  IsChecked="{Binding HintLevel, Converter={StaticResource EnumToBooleanConverter}, ConverterParameter=NoHints}"
                  Command="{Binding ChangeHintLevelCommand}"
                  CommandParameter="NoHints"/>
+
+                <Border BorderBrush="Gray" BorderThickness="1" CornerRadius="5" Margin="0,20,0,0" Padding="10">
+                    <StackPanel>
+                        <TextBlock Text="Informacje o skrótach:" FontWeight="Bold" FontSize="14" Margin="0,0,0,10"/>
+
+                        <TextBlock Text="Hiszpańskie znaki:" FontWeight="Bold" FontSize="12"/>
+                        <TextBlock Text="Ctrl + A/E/I/O/U/N" FontSize="12" Foreground="DarkSlateGray"/>
+
+                        <TextBlock Text="Zaznacz wszystko:" FontWeight="Bold" FontSize="12" Margin="0,10,0,0"/>
+                        <TextBlock Text="Ctrl + Shift + A" FontSize="12" Foreground="DarkSlateGray"/>
+                    </StackPanel>
+                </Border>
 
                 <Button Content="{Binding MuteButtonText}" 
                 Command="{Binding ToggleMuteCommand}"
