--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HiszpanskiWpf"
         mc:Ignorable="d"
-        Title="Hiszpański WPF" Height="500" Width="900"
+        Title="Hiszpański WPF" Height="600" Width="900"
         Icon="/Assets/hiszp_icon.ico">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -59,7 +59,13 @@
 
 
             <!-- Treść pyatnia -->
-            <TextBlock Text="{Binding CurrentQuestion}" FontSize="20" FontWeight="Bold" Margin="0,0,0,10" TextAlignment="Center"/>
+            <TextBlock Text="{Binding CurrentQuestion}" 
+           FontSize="20" FontWeight="Bold" 
+           Margin="0,0,0,10" 
+           TextAlignment="Center"
+           TextWrapping="Wrap"
+           MaxWidth="450"
+           HorizontalAlignment="Center"/>
 
             <!-- Podpowiedź poniżej pytania -->
             <TextBlock Text="{Binding CurrentHint}" 
